// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChipList /> should adopt component props 1`] = `
<styled.ul>
  <Chip
    bgColor="whiteLight"
    color="purple"
  >
    chip1
  </Chip>
  <Chip
    bgColor="whiteLight"
    color="purple"
  >
    chip2
  </Chip>
</styled.ul>
`;

exports[`<ChipList /> should match baseline snapshot 1`] = `
<styled.ul>
  <Chip
    bgColor="white"
    color="blackLight"
  >
    chip1
  </Chip>
  <Chip
    bgColor="white"
    color="blackLight"
  >
    chip2
  </Chip>
</styled.ul>
`;
